# fista-litellm-course

litellmdemo/: pyproject.toml
projectname/: pyproject.toml
projectname/src/projectname/: __init__.py
