[project]
name = "litellmdemo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "“fistasolutions”", email = "fistasolutions@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.61.15",
]

[project.scripts]
litellmdemo = "litellmdemo:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
