[project]
name = "projectname"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "“fistasolutions”", email = "fistasolutions@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "crewai>=0.95.0",
    "litellm>=1.61.3",
]

[project.scripts]
projectname = "projectname:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
